Some deployment changes

--- a/templates/404.html
+++ b/templates/404.html
@@ -2,9 +2,10 @@
   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>{% block title %}{% endblock %}</title>
+<title>Not found</title>
 </head>
 <body>
-{% block content %}{% endblock %}
+<h1> 404 : Not Found </h1>
+What you were looking for was not found on this website...
 </body>
 </html>
