--- a/templates/500.html
+++ b/templates/500.html
@@ -2,9 +2,10 @@
   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>{% block title %}{% endblock %}</title>
+<title>Application Error</title>
 </head>
 <body>
-{% block content %}{% endblock %}
+<h1> 500 : Application error </h1>
+There was some error in the site... Please check back later
 </body>
 </html>
